--- a/Financial Web/Financial Web/Views/Home/Index.cshtml
+++ b/Financial Web/Financial Web/Views/Home/Index.cshtml
@@ -1,1 +1,6 @@
-﻿olaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+﻿<body bgcolor="#000000">
+    <div class="container px-4 py-5" id="custom-cards">
+        <h2 class="pb-2 border-bottom">Título</h2>
+
+    </div>
+</body>
